--- a/index.html
+++ b/index.html
@@ -1,144 +1,211 @@
 <!DOCTYPE html>
 <html lang="ua">
 <head>
-    <meta charset="utf-8">
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+	<meta charset="utf-8">
+	<link href="css/style.css" rel="stylesheet">
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<!-- VK OpenAPI library -->
+	<script src="https://vk.com/js/api/openapi.js?136" type="text/javascript"></script>
 
-    <!--script type="text/javascript" src="js/script.js"></script-->
-    <title>YouthMusic</title>
+	<script src="js/jquery-1.11.3.min.js"></script>
+	<!--script type="text/javascript" src="js/script.js"></script-->
+	<title>YouthMusic</title>
 </head>
 <body>
+<script>
+
+
+$(document).ready(function () {
+	VK.init({
+		apiId: 5704578
+	});
+
+	$('#startInitVK').click(function (argument) {
+		
+		VK.Auth.login(function (session) {
+			console.log(' VK Session -> ' + JSON.stringify(session));
+			user_id = session["session"]["mid"];
+			console.log(' User`s ID -> ' + user_id);
+			var audios = VK.Api.call('audio.get', {owner_id:user_id, need_user:1, offset:0, count:15, v:5.60}, function(data){
+
+				$( "#vkmusic" ).append("<p>You have " + data.response.count + " audios:</p>");
+
+				for (var i = 1; i < data.response.items.length; i++) {
+					var song = data.response.items[i];
+					var song_title = song["artist"] + "--" + song["title"];
+					$( "#vkmusic" ).append("<p>" + song_title + "</p>")
+				}
+
+
+
+				console.log('audio.get returns it ->' + JSON.stringify(data));
+				console.log(data["response"]["items"][1]["id"]); // this is song id
+
+				//var a = document.createElement('audio');
+				// var a = new Audio('https://cs7-2v4.vk-cdn.net/p18/9f7ff81d62f2ee.mp3?extra=bCsLcLHnCAr4At6q-PYELRqNv7_sbXTyxpHSpBm0wDXIgR0njMbHC2C7F81S9A8vb-b9UaUu1fO6hnE8SfWNgNi-mcpmc1Oee-qnJp9Kco_RRxPchAxuQgWTNYGglkKiAkOEiR5aUctx-UU');
+				// $( "#vkmusic" ).append( $(a) );  
+				var aud_template = `
+					<audio src="" controls>
+
+					</audio>
+				`;
+				for (var i = 1; i <= data.response.items.length - 2  ; i++) {
+					console.log(i + 'th iteration');
+					src = data.response.items[i]["url"];
+					var to_insert = $(aud_template);
+					to_insert.attr("src", src);
+					$('#vkmusic').append(to_insert);
+				}
+				var $a_template = $(aud_template);
+				$( "#vkmusic" ).append( $a_template );
+				//a.play();
+
+			});
+		}, 15)
+	});
+
+	
+})
+
+	
+	
+
+</script>
+
 
 
 <nav class="navbar navbar-default navbar-static-top navbar-fixed-top" style="margin:0;padding:0;border:none">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mylinks"
-                    aria-expanded="false" >
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">
-                <img class="img-responsive" src="img/logo2.png" style=" max-height:61px;margin-top:-20px;">
-            </a>
-            <p class="navbar-text">Welcome to Youth Music</p>
-        </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="mylinks" onclick="return false;">
-            <div class="navbar-header navbar-right">
-                <ul class="nav navbar-nav">
-                    <li data-toggle="modal" data-target="#myModalLog"><a href="#">
-                        Sign In</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="navbar-header navbar-right">
-                <img src="img/sing.png" style=" max-height:60px;">
-            </div>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
+	<div class="container-fluid">
+		<!-- Brand and toggle get grouped for better mobile display -->
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mylinks"
+					aria-expanded="false" >
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="#">
+				<img class="img-responsive" src="img/logo2.png" style=" max-height:61px;margin-top:-20px;">
+			</a>
+			<p class="navbar-text">Welcome to Youth Music</p>
+		</div>
+		<!-- Collect the nav links, forms, and other content for toggling -->
+		<div class="collapse navbar-collapse" id="mylinks" onclick="return false;">
+			<div class="navbar-header navbar-right">
+				<ul class="nav navbar-nav">
+					<li id="startInitVK" data-toggle="modal" data-target="yModalLog"><a href="#">
+						Sign In</a>
+					</li>
+				</ul>
+			</div>
+			<div class="navbar-header navbar-right">
+				<img src="img/sing.png" style=" max-height:60px;">
+			</div>
+		</div><!-- /.navbar-collapse -->
+	</div><!-- /.container-fluid -->
 </nav>
 <!-- Modal log-in -->
 <div class="modal fade" id="myModalLog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel">Название модали</h4>
-            </div>
-            <div class="col-xs-12 col-md-6 col-md-offset-3">
-                <form role="form">
-                    <h1>Войти</h1>
-                    <div class="form-group has-success">
-                        <label for="exampleInputEmail1" class='control-label'>Email</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
-                        <span class="glyphicon glyphicon-ok form-control-feedback"
-                              style="top:13em;text-align: left;"></span>
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Пароль</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1"
-                               placeholder="Password">
-                    </div>
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox"> Запомнить меня
-                        </label>
-                    </div>
-                    <button type="submit" class="btn btn-default">Отправить</button>
-                </form>
-            </div>
-            <div class="modal-footer">
-            </div>
-        </div>
-    </div>
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+				<h4 class="modal-title" id="myModalLabel">Название модали</h4>
+			</div>
+			<div class="col-xs-12 col-md-6 col-md-offset-3">
+				<form role="form">
+					<h1>Войти</h1>
+					<div class="form-group has-success">
+						<label for="exampleInputEmail1" class='control-label'>Email</label>
+						<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+						<span class="glyphicon glyphicon-ok form-control-feedback"
+							  style="top:13em;text-align: left;"></span>
+					</div>
+					<div class="form-group">
+						<label for="exampleInputPassword1">Пароль</label>
+						<input type="password" class="form-control" id="exampleInputPassword1"
+							   placeholder="Password">
+					</div>
+					<div class="checkbox">
+						<label>
+							<input type="checkbox"> Запомнить меня
+						</label>
+					</div>
+					<button type="submit" class="btn btn-default">Отправить</button>
+				</form>
+			</div>
+			<div class="modal-footer">
+			</div>
+		</div>
+	</div>
 </div>
 
 
 <nav class="navbar navbar-default navbar-fixed-bottom" id="player">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#">
-                <span class="glyphicon glyphicon-backward" aria-hidden="true"></span>
-            </a>
-            <a class="navbar-brand" href="#">
-                <span class="glyphicon glyphicon-stop" aria-hidden="true"></span>
-            </a>
-            <a class="navbar-brand" href="#">
-                <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-            </a>
-            <a class="navbar-brand" href="#">
-                <span class="glyphicon glyphicon-pause" aria-hidden="true"></span>
-            </a>
-            <a class="navbar-brand" href="#">
-                <span class="glyphicon glyphicon-forward" aria-hidden="true"></span>
-            </a>
-            <p class="navbar-text">Young Music - Young Power.</p>
-        </div>
+	<div class="container-fluid">
+		<!-- Brand and toggle get grouped for better mobile display -->
+		<div class="navbar-header">
+			<a class="navbar-brand" href="#">
+				<span class="glyphicon glyphicon-backward" aria-hidden="true"></span>
+			</a>
+			<a class="navbar-brand" href="#">
+				<span class="glyphicon glyphicon-stop" aria-hidden="true"></span>
+			</a>
+			<a class="navbar-brand" href="#">
+				<span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+			</a>
+			<a class="navbar-brand" href="#">
+				<span class="glyphicon glyphicon-pause" aria-hidden="true"></span>
+			</a>
+			<a class="navbar-brand" href="#">
+				<span class="glyphicon glyphicon-forward" aria-hidden="true"></span>
+			</a>
+			<p class="navbar-text">Young Music - Young Power.</p>
+		</div>
 
-    </div><!-- /.container-fluid -->
+	</div><!-- /.container-fluid -->
 </nav>
 
-    <div class="parallax">
+	<div class="parallax">
 
-    </div>
+	</div>
 
 <div id="cont">
 
-    <nav class="navbar navbar-default navbar-static-top" style="margin-bottom:60px">
+	<nav class="navbar navbar-default navbar-static-top" style="margin-bottom:60px">
 
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">All</a>
-            </div>
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">Songs</a>
-            </div>
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">Authors</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <form class="navbar-form navbar-left">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Пошук музики">
-                    </div>
-                    <button type="submit" class="btn btn-default" id="subbut">Пошук</button>
-                </form>
-                
-            </div><!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
+		<div class="container-fluid">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<a class="navbar-brand" href="#">All</a>
+			</div>
+			<div class="navbar-header">
+				<a class="navbar-brand" href="#">Songs</a>
+			</div>
+			<div class="navbar-header">
+				<a class="navbar-brand" href="#">Authors</a>
+			</div>
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<form class="navbar-form navbar-left">
+					<div class="form-group">
+						<input type="text" class="form-control" placeholder="Пошук музики">
+					</div>
+					<button type="submit" class="btn btn-default" id="subbut">Пошук</button>
+				</form>
+				
+			</div><!-- /.navbar-collapse -->
+		</div>
+		<!-- /.container-fluid -->
+	</nav>
+
+	<div id="vkmusic">
+		
+	</div>
 
 </div>
-<script src="js/jquery-1.11.3.min.js"></script>
+
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.js"></script>
 <script src="js/ourjs.js"></script>
